--- a/ContactsDirectory.Ui/Views/MainWindow.xaml
+++ b/ContactsDirectory.Ui/Views/MainWindow.xaml
@@ -1,12 +1,126 @@
-﻿<Window x:Class="ContactsDirectory.Views.Ui.MainWindow"
+﻿<Window x:Class="ContactsDirectory.Ui.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ContactsDirectory.Ui"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Height="450" Width="500"
+        WindowStyle="None"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}" 
+        TextElement.FontWeight="Regular" 
+        TextElement.FontSize="17" 
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto" 
+        Background="{DynamicResource MaterialDesignPaper}" 
+        FontFamily="{DynamicResource MaterialDesignFont}" >
+    <Window.Resources>
+        <ResourceDictionary>
+            <DataTemplate x:Key="contactListTemplate">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel  Orientation="Horizontal">
+                        <TextBlock FontSize="16" Text="{Binding Path=Surname}" Margin="5"/>
+                        <TextBlock FontSize="16" Text="{Binding Path=Name}"  Margin="5"/>
+                    </StackPanel>
+                    <TextBlock Grid.Row="1" FontSize="12" Text="{Binding Path=PhoneNumber}" HorizontalAlignment="Left" />
+                </Grid>
+            </DataTemplate>
+        </ResourceDictionary>
+    </Window.Resources>
+    <materialDesign:DialogHost
+        Identifier="RootDialogHostId"
+        CloseOnClickAway="False"
+        OverlayBackground="{DynamicResource PrimaryHueDarkBrush}">
+        <GroupBox
+            MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown"
+            Header="Contacts"
+            Style="{DynamicResource MaterialDesignGroupBox}"
+            Margin="8,0" 
+            materialDesign:ShadowAssist.ShadowDepth="Depth5"
+            BorderThickness="0">
+            <GroupBox.HeaderTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <materialDesign:PackIcon
+                            Grid.Column="0"
+                            Kind="AccountGroupOutline"
+                            Height="32"
+                            Width="32"
+                            VerticalAlignment="Center" 
+                            HorizontalAlignment="Left" />
+                        <TextBlock 
+                            Grid.Column="1"
+                            Margin="8,0,0,0"
+                            VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
+                            Text="{Binding}" 
+                            HorizontalAlignment="Left" />
+                        <Button
+                            Grid.Column="2"
+                            Style="{StaticResource MaterialDesignToolButton}"
+                            Command="{Binding DataContext.CloseCommand, RelativeSource={RelativeSource AncestorType=GroupBox}}"
+                            ToolTip="Exit">
+                            <materialDesign:PackIcon
+                                Kind="WindowClose" 
+                                Height="30" Width="30"
+                                Foreground="GhostWhite"/>
+                        </Button>
+                    </Grid>
+                </DataTemplate>
+            </GroupBox.HeaderTemplate>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition />
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                <TextBox  
+                        Grid.Row="1"
+                        FontSize="16"
+                        Text="{Binding SearchKeyword, UpdateSourceTrigger=PropertyChanged}"
+                        Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                        materialDesign:HintAssist.Hint="Search"
+                        materialDesign:HintAssist.IsFloating="True"
+                        materialDesign:TextFieldAssist.HasClearButton="True"/>
+                    
+                
+                <ListBox Grid.Row="2"
+                         Margin="0,20,0,0"
+                         ItemsSource="{Binding FilteredContacts}"
+                         ItemTemplate="{StaticResource contactListTemplate}"
+                         SelectedItem="{Binding SelectedContact,UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseLeftButtonUp">
+                            <i:InvokeCommandAction Command="{Binding ShowEditContactViewCommand}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </ListBox>
+                <Button 
+                    Grid.Row="3"
+                    Width="200"
+                    HorizontalAlignment="Right"
+                    ToolTip="Create new contact"
+                    Command="{Binding ShowCreateContactViewCommand}">
+                    <materialDesign:PackIcon
+                        Kind="AccountPlusOutline"
+                        Height="32"
+                        Width="32"
+                        VerticalAlignment="Center" 
+                        HorizontalAlignment="Left" />
+                </Button>
+            </Grid>
+        </GroupBox>
+    </materialDesign:DialogHost>
 </Window>
